[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/level_select.png" type="Texture" id=1]
[ext_resource path="res://ui/LevelSelectMenu.gd" type="Script" id=2]
[ext_resource path="res://ui/custom_widgets/SelectLevelButton.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.771812, 1 )
colors = PoolColorArray( 1, 1, 1, 0.588235, 1, 1, 1, 0.588235, 1, 1, 1, 0 )

[node name="LevelSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 230 )
amount = 160
lifetime = 128.0
preprocess = 128.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 78 )
spread = 1.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
color_ramp = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectButton1" parent="." instance=ExtResource( 3 )]
margin_left = 274.0
margin_top = 171.0
margin_right = 374.0
margin_bottom = 271.0
beat = true
level = 1

[node name="LevelSelectButton2" parent="." instance=ExtResource( 3 )]
margin_left = 477.0
margin_top = 103.0
margin_right = 577.0
margin_bottom = 203.0
beat = true
level = 2

[node name="LevelSelectButton3" parent="." instance=ExtResource( 3 )]
margin_left = 664.0
margin_top = 228.0
margin_right = 764.0
margin_bottom = 328.0
level = 3

[connection signal="level_selected" from="LevelSelectButton1" to="." method="_select_level"]
[connection signal="level_selected" from="LevelSelectButton2" to="." method="_select_level"]
[connection signal="level_selected" from="LevelSelectButton3" to="." method="_select_level"]
